fix: make extension boxes stretch to be same height (#20)

--- a/src/extensions/manager/ExtensionCard.css
+++ b/src/extensions/manager/ExtensionCard.css
@@ -1,6 +1,7 @@
 .card.extension-card {
     min-height: 9rem;
     background-color: var(--extension-card-bg);
+    flex: 1;
 }
 
 .extension-card .extension-card-body-title {
